--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@popperjs/core": "^2.10.2",
     "angular-calendar": "^0.30.1",
     "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.10.2",
     "date-fns": "^2.29.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
