updated to angular v17. Problems with ngrx store - wrong version 2.

--- a/angular.json
+++ b/angular.json
@@ -70,10 +70,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "appoints:build:production"
+              "buildTarget": "appoints:build:production"
             },
             "development": {
-              "browserTarget": "appoints:build:development"
+              "buildTarget": "appoints:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -81,7 +81,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "appoints:build"
+            "buildTarget": "appoints:build"
           }
         },
         "test": {
