Updated to angular v18 and latest ngrx/store.

--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.12",
-    "@angular/cdk": "^14.2.7",
+    "@angular/animations": "^18.2.12",
+    "@angular/cdk": "^15.2.9",
     "@angular/common": "^17.3.12",
-    "@angular/compiler": "^17.3.12",
-    "@angular/core": "^17.3.12",
-    "@angular/forms": "^17.3.12",
-    "@angular/platform-browser": "^17.3.12",
-    "@angular/platform-browser-dynamic": "^17.3.12",
-    "@angular/router": "^17.3.12",
+    "@angular/compiler": "^18.2.12",
+    "@angular/core": "^18.2.12",
+    "@angular/forms": "^18.2.12",
+    "@angular/platform-browser": "^18.2.12",
+    "@angular/platform-browser-dynamic": "^18.2.12",
+    "@angular/router": "^18.2.12",
     "@ng-bootstrap/ng-bootstrap": "^13.1.0",
-    "@ngrx/component": "^14.3.2",
-    "@ngrx/effects": "^14.3.2",
-    "@ngrx/store": "^14.3.2",
-    "@ngrx/store-devtools": "^14.3.2",
+    "@ngrx/component": "^18.1.1",
+    "@ngrx/effects": "^18.1.1",
+    "@ngrx/store": "^18.1.1",
+    "@ngrx/store-devtools": "^18.1.1",
     "@popperjs/core": "^2.10.2",
     "angular-calendar": "^0.30.1",
     "bootstrap": "^5.2.0",
@@ -33,23 +33,24 @@
     "date-fns": "^2.29.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.10"
+    "zone.js": "~0.14.10",
+    "@ngrx/operators": "^18.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.11",
-    "@angular-eslint/builder": "14.2.0",
-    "@angular-eslint/eslint-plugin": "14.2.0",
-    "@angular-eslint/eslint-plugin-template": "14.2.0",
-    "@angular-eslint/schematics": "14.2.0",
-    "@angular-eslint/template-parser": "14.2.0",
-    "@angular/cli": "~17.3.11",
-    "@angular/compiler-cli": "^17.3.12",
-    "@angular/localize": "^17.3.12",
-    "@ngrx/schematics": "^14.3.2",
+    "@angular-devkit/build-angular": "^18.2.12",
+    "@angular-eslint/builder": "18.4.1",
+    "@angular-eslint/eslint-plugin": "18.4.1",
+    "@angular-eslint/eslint-plugin-template": "18.4.1",
+    "@angular-eslint/schematics": "18.4.1",
+    "@angular-eslint/template-parser": "18.4.1",
+    "@angular/cli": "~18.2.12",
+    "@angular/compiler-cli": "^18.2.12",
+    "@angular/localize": "^18.2.12",
+    "@ngrx/schematics": "^18.1.1",
     "@types/jasmine": "~4.0.0",
-    "@typescript-eslint/eslint-plugin": "5.43.0",
-    "@typescript-eslint/parser": "5.43.0",
-    "eslint": "^8.27.0",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "eslint": "^8.57.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
